--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "wow-money-maker-calculator"
-version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+version = "0.2.0"
+description = "This program is a calculator that helps WoW AH scrubs make money."
+authors = ["Rob Kramlich"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
